Fix buttons alignment + add Discord button

--- a/static/kawata.css
+++ b/static/kawata.css
@@ -159,7 +159,7 @@ p {
     padding-top: 1.1rem;
 }
 
-.buttons {
+.button1 {
     margin: 10%;
     text-align: center;
 }
